# toaster-3000

./: .env.example  .flake8  .gitignore  CLAUDE.md  README.md  pyproject.toml  test_ui_demo.py
benchmarks/: conversations_20260418_103404.csv  conversations_20260418_153150.csv  conversations_20260418_154706.csv  conversations_20260418_154752.csv
docs/: CHECKPOINT_2026-04-15.md  ISSUE_1_SOLUTION_PLAN.md
scripts/: benchmark_pipeline.py  generate_test_audio.py
src/toaster_3000/: __init__.py  app.py  config.py  constants.py  main.py  rate_limit.py  recipes.py  runtime.py  services.py  session.py  session_manager.py  theme.py  toaster_3000.py  tool_audit.py  tools.py
tests/: conftest.py  conversations.json  phrases.json  test_new_architecture.py  test_toaster_3000.py  test_tools.py  test_utils.py
tests/ui/: run_ui_tests.py  test_toaster_interface.py
