[project]
name = "toaster-3000"
version = "0.1.0"
description = "AI voice agent with toaster personality combining TTS, STT, and conversational AI"
readme = "README.md"
authors = [
    { name = "Rick Anderson", email = "rick.rickanderson@gmail.com" }
]
requires-python = ">=3.10,<3.14"
dependencies = [
    "fastrtc[stt]==0.0.34",
    "smolagents",
    "gradio>=5.0.0",
    "python-dotenv",
    "faster-whisper",
    "numpy",
    "sounddevice",
    "soundfile",
    "hf-xet>=1.1.10",
    "kokoro-onnx>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov",
    "black",
    "isort",
    "flake8",
    "mypy",
]
ui-testing = [
    "pytest>=7.0.0",
    "pytest-asyncio",
    "requests",
]

[project.scripts]
toaster = "toaster_3000.main:main"
test-ui = "test_ui_demo:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
override-dependencies = [
    "av>=17.0.0",
]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[dependency-groups]
dev = [
    "playwright>=1.58.0",
]
